prusti-tests/tests/verify/ui/pure.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/pure.rs:40:5
   |
40 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:47:9
   |
47 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:55:1
   |
55 | / fn test_max3() -> i32 {
56 | |     let a = 4;
57 | |     let b = 3;
58 | |     max(a, b)
59 | | }
   | |_^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:68:11
   |
68 | #[ensures(result == max(a, b))]
   |           ^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:69:1
   |
69 | / fn test_max5(a: i32, b: i32) -> i32 {
70 | |     a
71 | | }
   | |_^

error: aborting due to 3 previous errors

